# semantic-release-demo

./: CHANGELOG.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
demo/: hello.py
