[tool.poetry]
name = "semantic-release-demo"
version = "0.3.4"
description = ""
authors = ["dian.sun <aj1044195@tdf.hubtotal.net>"]
readme = "README.md"
packages = [{include = "demo"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.semantic_release]
branch = 'main'
changelog_file = 'CHANGELOG.md'
upload_to_vcs_release = false
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["demo/__init__.py:__version__"]

[semantic_release.remote]
token = { env = "GH_TOKEN" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"