[tool.poetry]
name = "semantic-release-demo"
version = "0.3.10"
description = ""
authors = ["dian.sun <aj1044195@tdf.hubtotal.net>"]
readme = "README.md"
packages = [{include = "demo"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["demo/__init__.py:__version__"]
build_command = "poetry build"

[tool.semantic_release.publish]
upload_to_vcs_release = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"